    protected mode interface or not (joncampbell123).
  - Add dosbox.conf option vbememsize and vbememsizekb to control how much
    video memory is reported through the VESA BIOS, which can be less than
    actual video memory (but must be at least 256KB). This option can help
    with some DOS programs that have problems with "too much" video memory
    in the system (joncampbell123).

2026.01.02
  - VESA BIOS will remove 8-bit bank switching limit if the video memory
    is large enough to need more than 256 banks. Memory size will always
    be limited to no more than 64 banks (128 if smaller than 64KB
    granularity) only if S3 emulation is active. DOSBox Integrated Graphics
    machine type is exempt from bank switching limit, so, if you are running
    legacy code or Demoscene stuff against it that never clears the upper
    8 bits properly, it's not going to work unless you use smaller memsize
    settings. (joncampbell123).
  - Update BOOT command to support multiple disk images with swapping (maron2000).
  - Render scaler system has been modified so that render and frame caches
    are now dynamically allocated, instead of fixed buffers. Not only does
    this reduce memory wasted by over-large buffers, it also removes
    limitations on guest video mode resolution that previously capped the
    video mode to 1920x1440 or lower, and the advanced scalers (HQ2X,
    Advanced MAME, etc) to 800x600 or lower. (joncampbell123).
  - VGA output will now automatically disable doublescan mode whenever an
    advanced scaler, such as the "XBRZ" or the Advanced MAME scalers, are
    selected, so that the scalers can do their job properly on the low
    resolution graphics mode automatically. The user no longer has to
    manaully turn off doublescan mode for those scalers to work. (joncampbell123).
  - Added TV, Scanline, and RGB scaler variants appropriate for VGA
    200-line modes with doublescan enabled (renders to 400 lines). In fact